<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#55000000">
    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardViewDraft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:scrollbars="none"
            android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="18.8dp"
                android:layout_height="20.8dp"
                android:src="@drawable/ic_close_20"
                android:layout_gravity="right"
                android:layout_marginRight="9.6dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_popup_savetodraft"
                android:textColor="@color/colorAccent"
                android:textSize="21sp"
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginTop="9.6dp"
                android:layout_gravity="center_horizontal" />

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/ic_home"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="33dp"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:id="@+id/txtIsiNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_silahkan_isi_nama_savetodrft"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_light"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp">
                <TextView
                    android:id="@+id/txtTitleNamaCustomer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_nama_customer"
                    android:textColor="@color/header_text_2"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginBottom="3dp"/>

                <EditText
                    android:id="@+id/edNamaCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/field_hint_nama_customer"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/z_rounded_background_myapplication"
                    android:textColorHint="@color/text_field_hint"
                    android:layout_below="@+id/txtTitleNamaCustomer"/>
            </RelativeLayout>

            <Button
                android:id="@+id/btnSimpanKeDraft"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/button_simpan_ke_draft"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginTop="28dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="39dp"
                android:background="@drawable/z_button_radius_gradien"/>
        </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>