<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#55000000">
    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="18.8dp"
                android:layout_height="20.8dp"
                android:src="@drawable/ic_close_20"
                android:layout_gravity="right"
                android:layout_marginRight="9.6dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/txtTitlePopUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_popup_savetodraft_saved"
                android:textColor="@color/colorAccent"
                android:textSize="21sp"
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginTop="9.6dp"
                android:layout_gravity="center_horizontal" />

            <ImageView
                android:id="@+id/imgIconPopup"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/ic_disk"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="33dp"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:id="@+id/txtInfoPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_perhitungan_savetodrft"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_light"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="39dp"
                android:orientation="horizontal"
                android:weightSum="2.1">
                <LinearLayout
                    android:id="@+id/btnLeft"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/txtLeft"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_lihat_myapplication_savetodraft_saved"
                        android:textSize="14sp"
                        android:textColor="@color/warning_color"
                        android:gravity="center_horizontal"
                        android:fontFamily="@font/montserrat_bold"/>
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>

                <LinearLayout
                    android:id="@+id/btnRight"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/z_button_radius_gradien">
                    <ImageView
                        android:id="@+id/imgRight"
                        android:layout_width="29.33dp"
                        android:layout_height="29.33dp"
                        android:src="@drawable/ic_done"/>
                    
                    <TextView
                        android:id="@+id/txtRight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_ok_savetodraft_saved"
                        android:textSize="10sp"
                        android:textColor="@color/white"
                        android:gravity="center_horizontal"
                        android:fontFamily="@font/montserrat_bold"
                        android:layout_marginTop="6.33dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>