<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="37dp"
        card:cardCornerRadius="10dp"
        card:cardElevation="2dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imgClose"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@drawable/ic_close_20"
                    android:scaleType="fitXY"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="10"
                android:layout_marginTop="-10dp">
                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/onboard_title_size"
                    android:text="@string/text_onboard_title1"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/onboard_message_margin"
                    android:layout_marginRight="@dimen/onboard_message_margin"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4.0">
                    <ImageView
                        android:id="@+id/imgOnboard"
                        android:layout_width="@dimen/onboard_image_size"
                        android:layout_height="@dimen/onboard_image_size"
                        android:src="@drawable/ic_onboard_1"
                        android:layout_centerInParent="true" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txtContent"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.4"
                    android:textSize="12sp"
                    android:textColor="#333333"
                    android:text="@string/text_onboard_content1"
                    android:fontFamily="@font/roboto_light"
                    android:layout_marginLeft="@dimen/onboard_message_margin"
                    android:layout_marginRight="@dimen/onboard_message_margin"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:layout_marginLeft="@dimen/onboard_message_margin"
                    android:layout_marginRight="@dimen/onboard_message_margin">

                    <Button
                        android:id="@+id/btnTest"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/onboard_btn_height"
                        android:text="@string/btn_onboard_selanjutnya"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:background="@drawable/gradient_button_bg_dash"
                        android:fontFamily="@font/montserrat_bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8">
                    <TextView
                        android:id="@+id/txtSkip"
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp"
                        android:text="@string/text_onboard_skip"
                        android:letterSpacing="0.15"
                        android:gravity="center_horizontal"
                        android:fontFamily="@font/montserrat_bold"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>